ejercicios con javascript avanzado, fetch, async, await

--- a/Javascript-Avanzado/await-async/index.html
+++ b/Javascript-Avanzado/await-async/index.html
@@ -6,11 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Ejercicio fetch en JS</title>
+  <title>Async y Await</title>
 </head>
 
 <body>
   <div>
+    <!-- Boton de gatos se ejecuta con async y await -->
     <label for="gatos">Gatos</label>
     <input type="button" id="btnCat" name="gatos" value="Agregar" />
   </div>
@@ -25,7 +26,7 @@
     <div id="divDogs" class="cont-img flex-item">
     </div>
   </div>
-  <script src="ejercicio-fetch.js"></script>
+  <script src="async.js"></script>
 </body>
 
 </html>
